Bugs fixed with JWT